--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,4 @@
-### `templates/index.html`
-```html
+### templates/index.html
 <!DOCTYPE html>
 <html>
 <head>
@@ -21,6 +20,3 @@
 </table>
 </body>
 </html>
-```
-
----
