--- a/templates/wallets.html
+++ b/templates/wallets.html
@@ -1,4 +1,4 @@
-```html
+### templates/wallets.html
 <!DOCTYPE html>
 <html>
 <head><title>Wallets</title></head>
@@ -29,6 +29,3 @@ function submitWallet(e) {
 </script>
 </body>
 </html>
-```
-
----
