--- a/templates/flight_sheets.html
+++ b/templates/flight_sheets.html
@@ -1,5 +1,4 @@
-### `templates/flight_sheets.html`
-```html
+### templates/flight_sheets.html
 <!DOCTYPE html>
 <html>
 <head><title>Flight Sheets</title></head>
@@ -48,6 +47,3 @@ function applyAll() {
 </script>
 </body>
 </html>
-```
-
----
