--- a/templates/wallets.html
+++ b/templates/wallets.html
@@ -1,9 +1,12 @@
-### templates/wallets.html
 <!DOCTYPE html>
 <html>
 <head><title>Wallets</title></head>
 <body>
 <h1>Wallets</h1>
+<nav>
+    <a href="/">Workers</a> |
+    <a href="/flight_sheets">Flight Sheets</a>
+</nav>
 <form method="post" action="#" onsubmit="submitWallet(event)">
     Coin: <input type="text" id="coin"><br>
     Wallet Address: <input type="text" id="address"><br>
