--- a/templates/flight_sheets.html
+++ b/templates/flight_sheets.html
@@ -1,9 +1,12 @@
-### templates/flight_sheets.html
 <!DOCTYPE html>
 <html>
 <head><title>Flight Sheets</title></head>
 <body>
 <h1>Flight Sheets</h1>
+<nav>
+    <a href="/">Workers</a> |
+    <a href="/wallets">Wallets</a>
+</nav>
 <form method="post" action="#" onsubmit="submitFS(event)">
     Name: <input id="name"><br>
     Coin: <input id="coin"><br>
