--- a/templates/flight_sheets.html
+++ b/templates/flight_sheets.html
@@ -1,4 +1,3 @@
-<!-- flight_sheets.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,6 +14,16 @@
   </style>
 </head>
 <body>
+  <nav class="navbar navbar-expand-lg navbar-dark mb-4" style="background-color: #222;">
+    <div class="container">
+      <a class="navbar-brand" href="/">HiveOS Local</a>
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link" href="/wallets">Wallets</a></li>
+        <li class="nav-item"><a class="nav-link" href="/flight_sheets">Flight Sheets</a></li>
+      </ul>
+    </div>
+  </nav>
+
   <div class="container mt-4">
     <h2 class="mb-4">Add New Flight Sheet</h2>
     <div class="card p-3">
@@ -38,7 +47,7 @@
         </div>
         <div class="col-md-3">
           <label>Miner</label>
-          <input id="miner" class="form-control" placeholder="Select miner">
+          <input id="miner" class="form-control" placeholder="Select miner tool">
         </div>
       </div>
       <div class="row g-2 mt-2">
