--- a/templates/flight_sheets.html
+++ b/templates/flight_sheets.html
@@ -14,16 +14,6 @@
   </style>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark mb-4" style="background-color: #222;">
-    <div class="container">
-      <a class="navbar-brand" href="/">HiveOS Local</a>
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="/wallets">Wallets</a></li>
-        <li class="nav-item"><a class="nav-link" href="/flight_sheets">Flight Sheets</a></li>
-      </ul>
-    </div>
-  </nav>
-
   <div class="container mt-4">
     <h2 class="mb-4">Add New Flight Sheet</h2>
     <div class="card p-3">
@@ -47,7 +37,12 @@
         </div>
         <div class="col-md-3">
           <label>Miner</label>
-          <input id="miner" class="form-control" placeholder="Select miner tool">
+          <select id="miner" class="form-select">
+            <option value="">Select miner tool</option>
+            <option value="xmrig">XMRig</option>
+            <option value="cpuminer">CPUMiner</option>
+            <option value="hubpage">HubPage</option>
+          </select>
         </div>
       </div>
       <div class="row g-2 mt-2">
