--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,8 +1,5 @@
-<nav>
-  <ul>
-    <li><a href="/">Home</a></li>
-    <li><a href="/wallets">Wallets</a></li>
-    <li><a href="/flight-sheets">Flight Sheets</a></li>
-  </ul>
+<nav style="background-color: #222; padding: 10px;">
+  <a href="/" style="color: white; margin-right: 15px; text-decoration: none;">Home</a>
+  <a href="/wallets" style="color: white; margin-right: 15px; text-decoration: none;">Wallets</a>
+  <a href="/flight-sheets" style="color: white; text-decoration: none;">Flight Sheets</a>
 </nav>
-<hr>
